apps/k3s/docmost/docmost-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: docmost
  name: docmost
  namespace: docmost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docmost
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: docmost
    spec:
      nodeSelector:
        worker: "true"
      containers:
        - env:
            - name: APP_URL
              value: https://docmost.k3s.zadar.family
            - name: REDIS_URL
              value: redis://docmost-redis:6379
          image: docmost/docmost:latest
          name: docmost
          ports:
            - containerPort: 3000
              name: docmost-http
              protocol: TCP
          volumeMounts:
            - mountPath: /app/data/storage
              name: docmost
      volumes:
        - name: docmost
          persistentVolumeClaim:
            claimName: docmost

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: docmost
  namespace: docmost
  name: docmost
spec:
  selector:
    app: docmost
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: docmost-ingress
  namespace: docmost
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`docmost.k3s.zadar.family`) # change to your domain
      kind: Rule
      services:
        - name: docmost
          port: 3000
  tls:
    secretName: zadar-family-tls # change to your cert name
